--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
     "@react-native-community/masked-view": "~0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/drawer": "~5.8.4",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
     "@react-navigation/native": "~5.6.1",
     "expo": "~38.0.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.1",
+    "react-native-paper": "^4.1.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.6",
     "react-native-screens": "~2.9.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "0.11.7"
   },
   "devDependencies": {
